--- a/.github/workflows/grading.yaml
+++ b/.github/workflows/grading.yaml
@@ -24,6 +24,7 @@ jobs:
     - name: Run Grading Tests
       run: |
         pip install pytest boto3
-      
+        pytest
+        
     - name: Run script
         run: python test_lab1.py
